fixade validator klassen borde va som det ska vara nu